@@ -1,6 +1,9 @@
 Tue May 19 2015
 1. Bug fixing
    * Correct table creation at beginning of MCMCGuide09 that was wrong due to a change in variable name
+   * Fixed a bug preventing Negative-binomial models from running
+2. Changes
+   * Add support for Negative-binomial in MCMC (requires MLwiN version 2.33 or higher)
 
 Fri May 15 2015
 1. Changes
